Fix Jinja2 template error in recipe edit form
- Remove invalid 'not in' filter that caused TemplateRuntimeError
- Add new_tags parameter to all recipe_form.html render calls
- Calculate new_tags in app.py to separate existing tags from new ones
- Fixes bug where editing a recipe would crash with Jinja2 error

--- a/templates/recipe_form.html
+++ b/templates/recipe_form.html
@@ -162,7 +162,7 @@
                                    name="tags" 
                                    id="tags"
                                    placeholder="e.g., dessert, chocolate, quick"
-                                   value="{% if recipe %}{{ recipe.tags|select('not in', all_tags.keys())|join(', ') }}{% endif %}">
+                                   value="{% if recipe and new_tags %}{{ new_tags|join(', ') }}{% endif %}">
                         </div>
                         <div class="form-text">
                             Tags are case-insensitive and help organize your recipes
