--- a/templates/tag_manager.html
+++ b/templates/tag_manager.html
@@ -144,7 +144,7 @@
                     </div>
                 </form>
                 <small class="form-text text-muted">
-                    Tag names are case-insensitive and will be converted to lowercase.
+                    Tag names are case-insensitive and will be converted to uppercase.
                 </small>
             </div>
         </div>
@@ -156,7 +156,7 @@
             </div>
             <div class="card-body">
                 <ul class="mb-0">
-                    <li>Tag names must be unique (case-insensitive)</li>
+                    <li>Tag names must be unique (case-insensitive, stored as uppercase)</li>
                     <li>Tags cannot be edited or deleted if they are associated with any recipes</li>
                     <li>Tags are automatically removed when they are no longer used by any recipe</li>
                     <li>You can add tags directly when creating or editing recipes</li>
